# bedrock-crewai-travelplanner

./: .env.example  README.md  gemini2_travel_v2.py  pyproject.toml  requirements.txt
