[project]
name = "bedrock-crewai-travelplanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3==1.37.37",
    "crewai>=0.28.1",
    "fastapi>=0.103.1",
    "google-generativeai>=0.3.1",
    "google-search-results>=2.4.2",
    "langchain==0.3.23",
    "langchain-aws==0.2.21",
    "langchain-community==0.3.21",
    "litellm==1.67.0",
    "pydantic>=2.4.2",
    "python-dotenv>=1.0.0",
    "streamlit>=1.29.0",
    "uvicorn>=0.23.2",
]
